--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Data Persistence Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,12 @@
     "eslint": "^7.15.0",
     "jest": "^26.6.3",
     "supertest": "^6.0.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.21.15",
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
+    "sqlite3": "^5.0.1"
   }
 }
